// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches the snapshot 1`] = `
Array [
  "Rock",
  <strong
    className="selection"
  >
    alone
  </strong>,
  "",
]
`;

exports[`it matches the snapshot 2`] = `
Array [
  "very",
  <strong
    className="selection"
  >
    longPhr
  </strong>,
  "aseWith Some Text",
]
`;
